objects/Case_Topic_And_Category__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is a list of items to build a dependent pick list on a visual force page</description>
    <fields>
        <fullName>Candidate_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for the new third option &quot;Candidate&quot;</description>
        <label>Candidate Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_Name__c</fullName>
        <label>Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the third checkbox which enables an item to show in the community picklists because community doesn&apos;t use the site or reg filter.</description>
        <label>Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DevSandboxId__c</fullName>
        <label>DevSandboxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Sub_Category__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Sub Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MVP__c</fullName>
        <label>MVP</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <label>Persona</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personas_that_work_the_case__c</fullName>
        <label>Personas that work the case</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registration Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subcategories__c</fullName>
        <label>subcategories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Topic and Category</label>
</CustomObject>